2006.06.26: David Nichols
	* fixed a bug compiling on Solaris without hash_map support with DEBUG
	  enabled

2006.06.20: David Nichols
	* updated examples/HTTPServer.qc to support SSL (https) services and
	  modular/multiple listeners on one server
	* fixed it so that base class constructor arguments in derived classes
	  can use references to constructor arguments

2006.06.19: David Nichols
	* added constants for X509 certificate validation for SSL connections
	* added Socket::verifyPeerCertificate() method for SSL connections
	* added getSSLCertVerificationCodeString() to return a string code for
	  Socket::verifyPeerCertificate() return values
	* added Qore::X509_VerificationReasons constant to map from verification
	  code strings as returned by getSSLCertVerificationCodeString() to text
	  descriptions.
	* added Socket::setCertificate() and Socket::setPrivateKey() methods to
	  set SSL parameters for server processes
	* created SSLCertificate and SSLPrivateKey classes for persistently
	  storing X509 certificates and private keys
	* added SSL server support to test/socket-test.q

2006.06.18: David Nichols
	* added openssl checks to configure.ac as a required component
	* improved library detection for pcre and openssl to check for OS-
	  specific shared libraries as well as static libraries, in case
	  the static libraries are not installed.
	* implemented new Socket methods: ::connectSSL(), ::acceptSSL(), and
	  SSL session handling, reading and writing in SSL connections
	* now Socket::connect() and Socket::accept() will throw exceptions if
	  they fail (before they would just return -1) - this is to be 
	  consistent with connectSSL() and acceptSSL() which will throw 
	  exceptions if SSL negotiation fails
	* added Socket::getSSLCipherName(), Socket::getSSLCipherVersion(), and
	  Socket::isSecure() methods
	* update HTTPClient class in examples/HTTPClient.qc to recognize the 
	  https protocol and use SSL

2006.06.14: David Nichols