@@ -1,6 +1,8 @@
 2006.06.26: David Nichols
 	* fixed a bug compiling on Solaris without hash_map support with DEBUG
 	  enabled
+	* fixed ModuleManager to track builtin features even when there is no
+	  current program when --enable-builtin-modules is set
 
 2006.06.20: David Nichols
 	* updated examples/HTTPServer.qc to support SSL (https) services and
